--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -55,7 +55,7 @@
       <div class="content">
         <span class="close"></span>
         <div class="modal-body">
-          <form name="reserve" action="index.html" method="GET" onsubmit="return validateData(event);" id="form">
+          <form name="reserve" action="index.html" method="GET" id="form">
             <div class="formData">
               <label for="first">Prénom</label><br>
               <input class="text-control" type="text" id="first" name="first" minlength="2" required /><br>
