--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -70,7 +70,8 @@
             </div>
             <div class="formData">
               <label for="birthdate">Date de naissance</label><br>
-              <input class="text-control" type="date" id="birthdate" name="birthdate" required /><br>
+              <input class="text-control" type="date" id="birthdate" name="birthdate" min="04-01-1899" max="04-20-2021"
+              required /><br>
             </div>
             <div class="formData" required>
               <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
